Fix wrong background color

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-  background-color: rgb(1, 1, 77);
+  background-color: rgb(1, 14, 64);
 }
 
 header {
